Fix some typos in the chef-server config

--- a/aws/cloudformation.json.erb
+++ b/aws/cloudformation.json.erb
@@ -154,6 +154,7 @@
                                     "    \"recipe[jira]\",", 
                                     "    \"recipe[stash]\",", 
                                     "    \"recipe[jenkins::master]\",", 
+                                    "    \"recipe[chef-server]\",",
                                     "    \"recipe[reverse-proxy]\"",
                                     "  ],", 
                                     "  \"stash\": {", 
@@ -191,12 +192,24 @@
                                     "    }", 
                                     "  },",
                                     "  \"chef-server\": {",
-                                    "    \"version\": \"11.1.0\",",
+                                    "    \"version\": \"11.1.3\",",
                                     "    \"configuration\": {",
                                     "      \"nginx\": {",
                                     "        \"enable_non_ssl\": true,",
                                     "        \"non_ssl_port\": \"8083\",",
                                     "        \"ssl_port\": \"4433\"",
+                                    "      }, ",
+                                    "      \"rabbitmq\": {",
+                                    "        \"data_dir\": \"/mnt/storage/chef-server/rabbitmq/data\"",
+                                    "      }, ",
+                                    "      \"chef-solr\": {",
+                                    "        \"data_dir\": \"/mnt/storage/chef-server/rabbitmq/data\"",
+                                    "      }, ",
+                                    "      \"bookshelf\": {",
+                                    "        \"data_dir\": \"/mnt/storage/chef-server/rabbitmq/data\"",
+                                    "      }, ",
+                                    "      \"postgresql\": {",
+                                    "        \"data_dir\": \"/mnt/storage/chef-server/rabbitmq/data\"",
                                     "      } ",
                                     "    }",
                                     "  },",
