Use the latest version of Chef server

--- a/aws/cloudformation.json.erb
+++ b/aws/cloudformation.json.erb
@@ -192,7 +192,6 @@
                                     "    }", 
                                     "  },",
                                     "  \"chef-server\": {",
-                                    "    \"version\": \"11.1.3\",",
                                     "    \"configuration\": {",
                                     "      \"nginx\": {",
                                     "        \"enable_non_ssl\": true,",
@@ -203,13 +202,13 @@
                                     "        \"data_dir\": \"/mnt/storage/chef-server/rabbitmq/data\"",
                                     "      }, ",
                                     "      \"chef-solr\": {",
-                                    "        \"data_dir\": \"/mnt/storage/chef-server/rabbitmq/data\"",
+                                    "        \"data_dir\": \"/mnt/storage/chef-server/chef-solr/data\"",
                                     "      }, ",
                                     "      \"bookshelf\": {",
-                                    "        \"data_dir\": \"/mnt/storage/chef-server/rabbitmq/data\"",
+                                    "        \"data_dir\": \"/mnt/storage/chef-server/bookshelf/data\"",
                                     "      }, ",
                                     "      \"postgresql\": {",
-                                    "        \"data_dir\": \"/mnt/storage/chef-server/rabbitmq/data\"",
+                                    "        \"data_dir\": \"/mnt/storage/chef-server/postgresql/data\"",
                                     "      } ",
                                     "    }",
                                     "  },",
@@ -296,7 +295,7 @@
                         "         --secret-key ", { "Fn::GetAtt": [ "HostKeys", "SecretAccessKey" ] }, 
                         "         --region ", { "Ref": "AWS::Region" }, 
                         " || error_exit 'Failed to run cfn-init' &&\n", 
-                        "chef-solo &&\n",
+                        "export HOME=/root && chef-solo &&\n",
                         "cfn-signal -e $? '", { "Ref": "DevOpsServerWaitHandle" }, "' &&\n",
                         "cfn-hup || error_exit 'Failed to start cfn-hup'\n"
                     ] ] }
