Separate the AWS stack name from the domain name. Add an 'update' target.

--- a/aws/cloudformation.json.erb
+++ b/aws/cloudformation.json.erb
@@ -238,6 +238,9 @@
                                     ] ] }, 
                                     "            \"port\": 7990",
                                     "        }",
+                                    "    },",
+                                    "    \"ssl\": {",
+                                    "        \"enabled\": \"true\"",
                                     "    }",
                                     "}"
                                 ] ] }, 
