Allow remote incoming SSH connections for git (hosted with Stash)

--- a/aws/cloudformation.json.erb
+++ b/aws/cloudformation.json.erb
@@ -98,6 +98,12 @@
                         "FromPort" : "443",
                         "ToPort" : "443",
                         "CidrIp" : "0.0.0.0/0"
+                    },
+                    {
+                        "IpProtocol" : "tcp",
+                        "FromPort" : "7999",
+                        "ToPort" : "7999",
+                        "CidrIp" : "0.0.0.0/0"
                     }
                 ]
             }
