Support forcing sites to SSL and implement for Jenkins and Chef

--- a/aws/cloudformation.json.erb
+++ b/aws/cloudformation.json.erb
@@ -223,13 +223,15 @@
                                     { "Fn::Join": [ "", [
                                         "            \"node_name\": \"jenkins.", { "Ref": "ZoneName" }, "\","
                                     ] ] },
-                                    "            \"port\": 8090",
+                                    "            \"port\": 8090,",
+                                    "            \"force_ssl\": true",
                                     "        },",
                                     "        \"chef\": {",
                                     { "Fn::Join": [ "", [
                                         "            \"node_name\": \"chef.", { "Ref": "ZoneName" }, "\","
                                     ] ] }, 
-                                    "            \"port\": 8083",
+                                    "            \"port\": 8083,",
+                                    "            \"force_ssl\": true",
                                     "        },",
                                     "        \"jira\": {",
                                     { "Fn::Join": [ "", [
