Local configuration may require a connection to the FQDN of a service, so make sure that the reverse proxies are configured and apache is running before applications

--- a/aws/cloudformation.json.erb
+++ b/aws/cloudformation.json.erb
@@ -156,11 +156,11 @@
                                     "    \"recipe[storage]\",", 
                                     "    \"recipe[mysql::server]\",", 
                                     "    \"recipe[apache2]\",", 
+                                    "    \"recipe[reverse-proxy]\",",
                                     "    \"recipe[jira]\",", 
                                     "    \"recipe[stash]\",", 
                                     "    \"recipe[jenkins::master]\",", 
-                                    "    \"recipe[chef-server]\",",
-                                    "    \"recipe[reverse-proxy]\"",
+                                    "    \"recipe[chef-server]\"",
                                     "  ],", 
                                     "  \"stash\": {", 
                                     "    \"home\": \"/mnt/storage/stash\",", 
