Make sure the Chef server certificates are persisted

--- a/aws/cloudformation.json.erb
+++ b/aws/cloudformation.json.erb
@@ -175,7 +175,8 @@
                                     "      \"/var/lib/stash\",", 
                                     "      \"/var/lib/git\",", 
                                     "      \"/var/lib/jenkins\",", 
-                                    "      \"/var/lib/jira\"", 
+                                    "      \"/var/lib/jira\",", 
+                                    "      \"/etc/chef-server\"", 
                                     "    ],", 
                                     "    \"mount_type\": \"aws_ebs\",", 
                                     { "Fn::Join": [ "", [
