--- a/chef-repo/cookbooks/reverse-proxy/templates/default/proxy_ssl.conf.erb
+++ b/chef-repo/cookbooks/reverse-proxy/templates/default/proxy_ssl.conf.erb
@@ -20,8 +20,8 @@
     RequestHeader set X-Forwarded-Proto "https"
 
     SSLEngine on
-    SSLCertificateFile      /etc/ssl/certs/ssl-cert-snakeoil.pem
-    SSLCertificateKeyFile   /etc/ssl/private/ssl-cert-snakeoil.key
-    SSLCertificateChainFile /etc/ssl/certs/ssl-cert-snakeoil.pem
+    SSLCertificateFile      <%= node['reverse-proxy']['ssl']['certificate_file'] %>
+    SSLCertificateKeyFile   <%= node['reverse-proxy']['ssl']['certificate_key_file'] %>
+    SSLCertificateChainFile <%= node['reverse-proxy']['ssl']['certificate_chain_file'] %>
 </VirtualHost>
 </IfModule>
