Make sure the correct external URLs are returned when making API calls into Chef

--- a/aws/cloudformation.json.erb
+++ b/aws/cloudformation.json.erb
@@ -211,7 +211,11 @@
                                     "        \"data_dir\": \"/mnt/storage/chef-server/chef-solr/data\"",
                                     "      }, ",
                                     "      \"bookshelf\": {",
-                                    "        \"data_dir\": \"/mnt/storage/chef-server/bookshelf/data\"",
+                                    "        \"data_dir\": \"/mnt/storage/chef-server/bookshelf/data\",",
+                                    "        \"external_url\": \"https://chef.<%= @domain %>\"",
+                                    "      }, ",
+                                    "      \"erchef\": {",
+                                    "        \"base_resource_url\": \"https://chef.<%= @domain %>\"",
                                     "      }, ",
                                     "      \"postgresql\": {",
                                     "        \"data_dir\": \"/mnt/storage/chef-server/postgresql/data\"",
