Add the server's IP address as an output and use this to SSH in (if available)

--- a/aws/cloudformation.json.erb
+++ b/aws/cloudformation.json.erb
@@ -60,6 +60,11 @@
             "Type": "String"
         }
     }, 
+    "Outputs": {
+        "PublicIp": {
+            "Value": { "Fn::GetAtt": [ "DevOpsServer", "PublicIp" ] }
+        }
+    },
     "Conditions": {
         "CreateFromSnapshot": {
             "Fn::Not" : [{ "Fn::Equals": [ { "Ref": "SnapshotId" }, "" ] }]
