--- a/aws/cloudformation.json.erb
+++ b/aws/cloudformation.json.erb
@@ -367,7 +367,10 @@
                 "KeyName": { "Ref": "KeyName" }, 
                 "SecurityGroups": [
                     { "Ref": "DevOpsServerSecurityGroup" }
-                ], 
+                ],
+                "Tags": [
+                    { "Key": "Name", "Value": { "Fn::Join": [ "", [ { "Ref": "StackName" } , "-all" ] ] } }
+                ],
                 "UserData": {
                     "Fn::Base64": { "Fn::Join": [ "", [
                         "#!/bin/bash -ex\n", 
